--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "postprocessing": "^6.36.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
