--- a/package.json
+++ b/package.json
@@ -6,34 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
-    "postprocessing": "^6.36.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "three": "^0.173.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "sass": "^1.83.4",
-    "vite": "^6.0.5"
+    "@vitejs/plugin-react": "^1.0.0",
+    "vite": "^2.0.0"
   }
 }
